--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -6,46 +6,49 @@ h1,
 h2,
 h3,
 h4 {
-  font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #343a40;
+  @apply text-default-color;
+  @apply font-saira;
+  @apply uppercase;
+  @apply font-bold;
+  @apply leading-none;
 }
 
 h1 {
   font-size: 6rem;
-  line-height: 5.5rem;
 }
 
 h2 {
   font-size: 3.5rem;
+  @apply mb-12;
 }
 
 h3 {
   font-size: 2rem;
+  @apply mb-2;
 }
 
 h4 {
   font-size: 1.5rem;
-  font-weight: 500;
-  color: #868e96;
+  @apply opacity-60;
+  @apply mb-4;
 }
 
 p {
-  color: #868e96;
-  margin: 16px 0 16px 0;
+  @apply text-default-color;
+  @apply opacity-60;
+  @apply mb-4;
 }
 
 a {
-  @apply text-blue-600;
+  @apply text-impact-color;
 }
 
 .section {
+  max-width: 75rem;
   @apply min-h-screen;
   @apply flex;
-  @apply items-center;
+  @apply flex-col;
+  @apply justify-center;
   @apply px-3;
   @apply py-20;
 }
@@ -54,4 +57,17 @@ a {
   .section {
     @apply p-12;
   }
+}
+
+.icon {
+  height: 3.5rem;
+  width: 3.5rem;
+  line-height: 3.5rem;
+  @apply inline-block;
+  @apply text-2xl;
+  @apply text-white;
+  @apply text-center;
+  @apply bg-default-color;
+  @apply rounded-full;
+  @apply mr-4;
 }
