--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: Saira Extra Condensed;
+  src: url(/google-fonts/s/sairaextracondensed/v5/-nFiOHYr-vcC7h8MklGBkrvmUG9rbpkisrTj6Ej0.woff2)
+    format("woff2");
+}
+
 h1,
 h2,
 h3,
