Changed to 600 weight, improved fallback font

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -9,7 +9,7 @@ h4 {
   @apply text-default-color;
   @apply font-saira;
   @apply uppercase;
-  @apply font-bold;
+  @apply font-semibold;
   @apply leading-none;
 }
 
